<resources>
    <string name="app_name">TripPlanner</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Sign_up">Sign Up</string>
    <string name="trips_by_you">Trips created by you:</string>
    <string name="trips_by_friends">Trips created by your friends:</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="view_update_profile">View/Update Profile</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="friends_list">Friends List</string>
    <string name="search_friends">Search friends</string>
    <string name="fname">First Name:</string>
    <string name="lname">Last Name:</string>
    <string name="email">Email Id:</string>
    <string name="pwd">Password :</string>
    <string name="repwd">Re-type password :</string>
    <string name="gender">Gender :</string>
    <string name="browse">Choose profile picture</string>
    <string name="cancel">Cancel</string>
    <string name="signup">Sign Up</string>
    <string name="femaleg">Female</string>
    <string name="maleg">Male</string>
    <string name="updatepic">Change profile picture</string>
    <string name="update">Edit Profile</string>
    <string name="members">Members :</string>
    <string name="backbtn">Back</string>
    <string name="chatrm">Chat Room</string>
    <string name="heading">Start planning a Trip</string>
    <string name="trip">Title :</string>
    <string name="trippic">Select Cover Photo</string>
    <string name="title">Title :</string>
    <string name="loc">Location :</string>
    <string name="createtrip">Create Trip</string>
    <string name="addmem">Add members to trip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="add_friend">+1 Add Friend</string>
    <string name="Accept">Accept</string>
    <string name="Reject">Reject</string>
    <string name="join">Join</string>
    <string name="searchAddplace">Search/Add places</string>
    <string name="viewplaces">View places</string>
    <string name="viewroute">View Routes</string>
    <string name="search_location_here">Search Location Here</string>
    <string name="search">Search</string>
    <string name="addplacebtn">Add to trip</string>
    <string name="Places">Places:</string>
    <string name="place_label">Places</string>
    <string name="discover_friends">Discover Friends:</string>
    <string name="discoverfriends">Discover Friends</string>
</resources>
