<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lata.tripplanner.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="103dp"
        android:id="@+id/emailText"
        android:hint="@string/Email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/emailText"
        android:layout_alignRight="@+id/emailText"
        android:layout_alignEnd="@+id/emailText"
        android:id="@+id/passwordText"
        android:hint="@string/Password" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="92dp" />

    <Button
        android:text="@string/Sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpButton"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_below="@+id/passwordText"
        android:layout_alignRight="@+id/passwordText"
        android:layout_alignEnd="@+id/passwordText" />

    <Button
        android:text="@string/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordText"
        android:layout_alignLeft="@+id/passwordText"
        android:layout_alignStart="@+id/passwordText"
        android:id="@+id/loginButton"
        android:textAllCaps="false"
        android:textSize="18sp" />
</RelativeLayout>
