<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lata.tripplanner.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/searchText"
        android:hint="@string/search_friends" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_search_black_24dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/searchText"
        android:layout_toEndOf="@+id/searchText"
        android:id="@+id/searchButton"
        android:layout_marginTop="8dp"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"
        android:id="@+id/mainIcon" />

    <ProgressBar
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/searchButton"
        android:layout_alignRight="@+id/mainIcon"
        android:layout_alignEnd="@+id/mainIcon"
        android:layout_marginRight="13dp"
        android:layout_marginEnd="13dp"
        android:id="@+id/progressBarMain" />

    <TextView
        android:text="@string/trips_by_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tripsByYouText"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:layout_below="@+id/searchText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@+id/tripsByYouText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/mainContainer">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="137dp"
                android:layout_below="@+id/tripsByYouText"
                android:layout_marginTop="11dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/yourTripsView" />

            <TextView
                android:text="@string/trips_by_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/tripsByFriendsText"
                android:layout_below="@+id/yourTripsView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />


            <ListView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_below="@+id/tripsByFriendsText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:id="@+id/friendsTripView" />

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:clickable="true"
                android:background="@drawable/ic_add_circle_black_24dp"
                android:id="@+id/addTripBtn"
                android:layout_marginBottom="19dp"
                android:layout_marginLeft="300dp"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
